--- a/locale/uk/app.edit.po
+++ b/locale/uk/app.edit.po
@@ -7,7 +7,6 @@ msgid ""
 msgstr ""
 "Project-Id-Version: app 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-07 15:23+0300\n"
 "PO-Revision-Date: 2015-09-07 15:23+0300\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Ukrainian\n"
@@ -18,3 +17,6 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4"
 " && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "\n"
+
+msgid "Home"
+msgstr "Головна"
