--- a/locale/en/app.po
+++ b/locale/en/app.po
@@ -1,4 +1,4 @@
-# Ukrainian translations for app package.
+# English translations for app package.
 # Copyright (C) 2015 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the app package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2015.
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: app 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2015-09-07 15:23+0300\n"
+"PO-Revision-Date: 2015-09-07 15:24+0300\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Ukrainian\n"
-"Language: uk\n"
+"Language-Team: English\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,61 +19,61 @@ msgstr ""
 "\n"
 
 msgid "Authorization"
-msgstr "Авторизація"
+msgstr ""
 
 msgid "Catalog of products"
-msgstr "Каталог продукції"
+msgstr ""
 
 msgid "Contact"
-msgstr "Контакт"
+msgstr ""
 
 msgid "Features"
-msgstr "Особливості"
+msgstr ""
 
 msgid "Home"
-msgstr "Головна"
+msgstr ""
 
 msgid "Inspinia Theme"
 msgstr "Zettheme Inc."
 
 msgid "Learn more"
-msgstr "Дізнатися більше"
+msgstr ""
 
 msgid "Lorem_Ipsum"
-msgstr "Простий манекен тексту друку стилю Лорем Іпсам"
+msgstr "Lorem Ipsum is simply dummy text of the printing."
 
 msgid "Pricing"
-msgstr "Ціноутворення"
+msgstr ""
 
 msgid "READ MORE"
-msgstr "ЧИТАТИ ДАЛІ"
+msgstr ""
 
 msgid "Team"
-msgstr "Команда"
+msgstr ""
 
 msgid "Testimonials"
-msgstr "Відгуки"
+msgstr ""
 
 msgid "carusel_text_1"
-msgstr "Ми розробляємо"
+msgstr "We craft"
 
 msgid "carusel_text_2"
-msgstr "веб -додатки та"
+msgstr "brands, web apps,"
 
 msgid "carusel_text_3"
-msgstr "інтерфейси,"
+msgstr "and user interfaces"
 
 msgid "carusel_text_4"
-msgstr "ми веб студія"
+msgstr "we are IN+ studio"
 
 msgid "carusel_text_5"
 msgstr " "
 
 msgid "carusel_text_6"
-msgstr "Ми створюємо сенс"
+msgstr "We create meaningful"
 
 msgid "carusel_text_7"
-msgstr "інтерфейси, які надихають ."
+msgstr "interfaces that inspire."
 
 msgid "carusel_text_8"
-msgstr "Життя - гра , перше правило якої - вважати, що це зовсім не гра , а серйозно ."
+msgstr "Cras justo odio, dapibus ac facilisis in, egestas eget quam."
