--- a/locale/ru/app.edit.po
+++ b/locale/ru/app.edit.po
@@ -18,5 +18,62 @@ msgstr ""
 " && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "\n"
 
+msgid "Authorization"
+msgstr "Авторизация"
+
+msgid "Catalog of products"
+msgstr "Каталог продукции"
+
+msgid "Contact"
+msgstr "Контакт"
+
+msgid "Features"
+msgstr "Особенности"
+
 msgid "Home"
 msgstr "Главная"
+
+msgid "Inspinia Theme"
+msgstr "Zettheme Inc."
+
+msgid "Learn more"
+msgstr "Узнать больше"
+
+msgid "Lorem_Ipsum"
+msgstr "Простой манекен текста печати стиля Лорем Ипсам"
+
+msgid "Pricing"
+msgstr "Ценообразование"
+
+msgid "READ MORE"
+msgstr "ЧИТАТЬ ДАЛЕЕ"
+
+msgid "Team"
+msgstr "Команда"
+
+msgid "Testimonials"
+msgstr "Отзывы"
+
+msgid "carusel_text_1"
+msgstr "Мы разрабатываем"
+
+msgid "carusel_text_2"
+msgstr "веб-приложения и"
+
+msgid "carusel_text_3"
+msgstr "пользовательские"
+
+msgid "carusel_text_4"
+msgstr "интерфейсы,"
+
+msgid "carusel_text_5"
+msgstr "мы веб студия"
+
+msgid "carusel_text_6"
+msgstr "Мы создаем смысл"
+
+msgid "carusel_text_7"
+msgstr "интерфейсы , которые вдохновляют ."
+
+msgid "carusel_text_8"
+msgstr "Жизнь - игра, первое правило которой - считать, что это вовсе не игра ."
