--- a/locale/en/app.edit.po
+++ b/locale/en/app.edit.po
@@ -18,16 +18,49 @@ msgstr ""
 " && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "\n"
 
+msgid "Administration"
+msgstr ""
+
 msgid "Authorization"
+msgstr ""
+
+msgid "Avatar menu"
+msgstr "Personal informations"
+
+msgid "Blog"
+msgstr ""
+
+msgid "Calendar"
+msgstr ""
+
+msgid "Catalog"
 msgstr ""
 
 msgid "Catalog of products"
 msgstr ""
 
+msgid "Categories"
+msgstr ""
+
+msgid "Companies"
+msgstr ""
+
 msgid "Contact"
 msgstr ""
 
+msgid "Contacts"
+msgstr ""
+
+msgid "Dashboard"
+msgstr ""
+
+msgid "E-commerce"
+msgstr ""
+
 msgid "Features"
+msgstr ""
+
+msgid "Forum"
 msgstr ""
 
 msgid "Home"
@@ -37,21 +70,48 @@ msgid "Inspinia Theme"
 msgstr "Zettheme Inc."
 
 msgid "Learn more"
+msgstr "Learn More"
+
+msgid "Logout"
 msgstr ""
 
 msgid "Lorem_Ipsum"
 msgstr "Lorem Ipsum is simply dummy text of the printing."
 
+msgid "Mailbox"
+msgstr ""
+
+msgid "Manage roles"
+msgstr "Manage Roles"
+
+msgid "Manage users"
+msgstr "Manage Users"
+
+msgid "Orders"
+msgstr ""
+
 msgid "Pricing"
 msgstr ""
 
+msgid "Products"
+msgstr ""
+
+msgid "Profile"
+msgstr ""
+
 msgid "READ MORE"
+msgstr ""
+
+msgid "Search for something"
 msgstr ""
 
 msgid "Team"
 msgstr ""
 
 msgid "Testimonials"
+msgstr ""
+
+msgid "Welcome to dashboard page"
 msgstr ""
 
 msgid "carusel_text_1"
