--- a/locale/en/app.po
+++ b/locale/en/app.po
@@ -18,6 +18,12 @@ msgstr ""
 " && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "\n"
 
+msgid "About"
+msgstr ""
+
+msgid "Address"
+msgstr ""
+
 msgid "Administration"
 msgstr ""
 
@@ -25,7 +31,7 @@ msgid "Authorization"
 msgstr ""
 
 msgid "Avatar menu"
-msgstr ""
+msgstr "Personal informations"
 
 msgid "Blog"
 msgstr ""
@@ -54,7 +60,13 @@ msgstr ""
 msgid "Dashboard"
 msgstr ""
 
+msgid "Dashboards"
+msgstr ""
+
 msgid "E-commerce"
+msgstr ""
+
+msgid "Email"
 msgstr ""
 
 msgid "Features"
@@ -70,7 +82,7 @@ msgid "Inspinia Theme"
 msgstr "Zettheme Inc."
 
 msgid "Learn more"
-msgstr ""
+msgstr "Learn More"
 
 msgid "Logout"
 msgstr ""
@@ -82,9 +94,12 @@ msgid "Mailbox"
 msgstr ""
 
 msgid "Manage roles"
-msgstr ""
+msgstr "Manage Roles"
 
 msgid "Manage users"
+msgstr "Manage Users"
+
+msgid "Note"
 msgstr ""
 
 msgid "Orders"
@@ -109,6 +124,12 @@ msgid "Team"
 msgstr ""
 
 msgid "Testimonials"
+msgstr ""
+
+msgid "Unvalid"
+msgstr ""
+
+msgid "Valid"
 msgstr ""
 
 msgid "Welcome to dashboard page"
