--- a/locale/ru/app.edit.po
+++ b/locale/ru/app.edit.po
@@ -202,7 +202,7 @@ msgid "Testimonials"
 msgstr "Отзывы"
 
 msgid "Unvalid"
-msgstr "Нету"
+msgstr "Отсутствует"
 
 msgid "Update"
 msgstr "Обновить"
